[package]
name = "libzmq_rs"
version = "0.1.0"
authors = ["Josh Madden <cyrex562@gmail.com>"]
edition = "2021"
license = "MPL-2.0"

[lib]
name = "libzmq_rs"
crate-type = ["staticlib"]
path = "src/lib.rs"

[dependencies]
libc = "0.2"
sodiumoxide = "0.2"
backtrace = "0.3"

# For Windows support
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["profileapi", "sysinfoapi","errhandlingapi", "winerror", "ntdef", "winsock2", "handleapi", "winbase"] }
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_Networking_WinSock", "Win32_System_IO", "Win32_System_Threading"] }
windows = "0.58.0"

# For macOS support
[target.'cfg(target_os = "macos")'.dependencies]
mach = "0.3"

[dev-dependencies]
hex = "0.4"

[features]

vmci = []
ws = []
wss = []
ipc  = []
linux = []
vxworks = []
curve = []
